--- a/styles/ebookstyles/ebook.scss
+++ b/styles/ebookstyles/ebook.scss
@@ -1,13 +1,13 @@
 
 .ebook{
-    margin-top: 8%;
+    margin-top: 12%;
     margin-bottom: 75px;
     .ebook-content{    
         h4{
             color:#656c81;
             line-height: 1.67;
            
-            font-size: 25px;
+            font-size: 22px;
             font-weight: 500;
             // margin: 25px auto;
         }
@@ -16,7 +16,7 @@
             line-height: 1.25;
             // margin-top: 25px;
             padding-top: 25px;
-            font-size: 62px;
+            font-size: 56px;
             font-weight: 800 !important;
         }
         .buttons{
@@ -28,6 +28,9 @@
                 padding: 15px 24px;
                 font-weight: 800 !important;
                 // margin-right: 20px;
+                a{
+                    color:black;
+                }
             }
             .inside{
                 font-weight: 800 !important;
@@ -35,6 +38,9 @@
                 border-radius: 10px;
                 font-size: 19px;
                 padding: 15px 16px;
+                a{
+                    color:black;
+                }
             }
         }
     }    
@@ -71,6 +77,7 @@ z-index:1;
     h3{
             font-weight: 800;
             margin-bottom: 25px;
+            font-size: 22px;
     }
     .card{
         padding-top: 35px;
@@ -125,17 +132,17 @@ z-index:1;
     }
   
     // Box.
-    & + label:before {
-      content: '';
-      margin-right: 10px;
-      display: inline-block;
-      vertical-align: text-top;
-      width: 20px;
-      height: 20px;
-      background: transparent;
-      border: 1px solid #cccccc;
-      border-radius:6px;
-    }
+    // & + label:before {
+    //   content: '';
+    //   margin-right: 10px;
+    //   display: inline-block;
+    //   vertical-align: text-top;
+    //   width: 20px;
+    //   height: 20px;
+    //   background: transparent;
+    //   border: 1px solid #cccccc;
+    //   border-radius:6px;
+    // }
   
     
     
@@ -224,7 +231,7 @@ z-index:1;
 }
 @media only screen and (max-width: 1200px) {
     .ebook{
-        margin-top: 10% !important;
+        margin-top: 12% !important;
         .ebook-content{    
             h4{
                 color:#656c81;
@@ -332,7 +339,7 @@ z-index:1;
                     border-radius: 10px;
                     font-size: 13px;
                    
-                    padding: 10px 22px;
+                    padding: 8px 18px;
                     font-weight: 700 !important;
                     // margin-right: 20px;
                 }
@@ -341,7 +348,7 @@ z-index:1;
                     background-color: #ffd84e;
                     border-radius: 10px;
                     font-size: 13px;
-                    padding: 12px 16px;
+                    padding: 10px 12px;
                 }
             }
         }    
@@ -463,7 +470,7 @@ z-index:1;
 } 
 
 .ebook{
-    margin-top: 12% !important;
+    margin-top: 14% !important;
     .ebook-content{    
         h4{
             color:#656c81;
@@ -558,7 +565,7 @@ z-index:1;
                     border-radius: 6px;
                     font-size: 13px;
                    margin: auto 5px;
-                    padding: 7px 13px;
+                    padding: 10px 16px;
                     font-weight: 700 !important;
                     // margin-right: 20px;
                     .pd{
@@ -572,7 +579,7 @@ z-index:1;
                     border-radius: 6px;
                     font-size: 13px;
                     margin: auto 5px;
-                    padding: 10px 7px !important;
+                    padding: 12px 8px !important;
                 }
             }
         }
@@ -580,6 +587,9 @@ z-index:1;
     .right-bg{
        display: none;
     } 
+    .img-2{
+        display:none;
+    }
     .report{
         margin-top:40px;
     }
