--- a/styles/ebookstyles/ebook.scss
+++ b/styles/ebookstyles/ebook.scss
@@ -59,11 +59,13 @@
     position: absolute;
     top: 200px;
     right: 1px;
+    width:50%;
 }
 .img-2{
     position: absolute;
     top: 350px;
     left: 1px;
+    width:20%;
 }
 .right-bg{
 //     background-image: url("../../images/topleft-bg.png");
@@ -307,10 +309,7 @@ z-index:1;
           }
        
       }
-      .sm{
-        // padding-top: 20px !important;
-        height: 320px !important;
-    }
+     
     .img2-response{
         height: 425px !important;
     }
@@ -322,7 +321,7 @@ z-index:1;
                 color:#656c81;
                 line-height: 1.67;
                
-                font-size: 16px;
+                font-size: 14px;
                 font-weight: 500;
                 margin: 20px auto;
             }
@@ -334,12 +333,12 @@ z-index:1;
                 font-weight: 600;
             }
             .buttons{
-                margin-top: 35px;
+                margin-top: 25px;
                 .pdf{
                     border-radius: 10px;
                     font-size: 13px;
                    
-                    padding: 8px 18px;
+                    padding: 6px 16px;
                     font-weight: 700 !important;
                     // margin-right: 20px;
                 }
@@ -348,11 +347,17 @@ z-index:1;
                     background-color: #ffd84e;
                     border-radius: 10px;
                     font-size: 13px;
-                    padding: 10px 12px;
+                    padding: 7px 10px;
                 }
             }
         }    
-    }   
+    } 
+    .img-2{
+    position: absolute;
+    top: 210px;
+    left: 1px;
+    width:20%;
+}  
     .card{
         
         .full-name{
@@ -401,12 +406,18 @@ z-index:1;
     }
 } 
     .report{
-     margin-bottom: 30px;
+     margin-bottom: 70px;
+     margin-top:100px;
   
     .report-title{
      font-size: 22px;
     } 
-}  
+} 
+
+.footer-border{
+    padding-bottom: 0px;
+    border-bottom: 1px solid #dfdfdf;
+} 
 }
 @media only screen and (max-width: 765px) {
   
@@ -468,6 +479,10 @@ z-index:1;
         }
     }
 } 
+.sm{
+    // padding-top: 20px !important;
+    height: 330px !important;
+}
 
 .ebook{
     margin-top: 14% !important;
@@ -509,7 +524,6 @@ z-index:1;
         }
     }    
 }   
-    
 
 }
 @media only screen and (max-width: 445px) {
@@ -537,7 +551,7 @@ z-index:1;
         }
     }    
     .lists{
-        margin: 10px auto !important;
+        margin: -10px auto !important;
     }
     .ebook{
         margin-top: 12% !important;
@@ -558,14 +572,14 @@ z-index:1;
                 font-weight: 600;
             }
             .buttons{
-                justify-content: start !important;
+                justify-content: space-around !important;
                 margin-top: 35px;
                 margin-bottom: 25px;
                 .pdf{
                     border-radius: 6px;
                     font-size: 13px;
                    margin: auto 5px;
-                    padding: 10px 16px;
+                    padding: 10px 24px;
                     font-weight: 700 !important;
                     // margin-right: 20px;
                     .pd{
@@ -579,7 +593,7 @@ z-index:1;
                     border-radius: 6px;
                     font-size: 13px;
                     margin: auto 5px;
-                    padding: 12px 8px !important;
+                    padding: 12px 16px !important;
                 }
             }
         }
@@ -598,6 +612,8 @@ z-index:1;
     }
     .img2-response{
         float: left !important;
+        height: 420px;
+        z-index:1;
     } 
     .download{
         padding: 10px 25px;
@@ -623,9 +639,18 @@ z-index:1;
             font-size: 15px;
         }
     }
+    .whats-inside h3 {
+        font-size: 32px;
+        font-weight: 600;
+         margin-bottom: 25px; 
+    }
     .l{
         margin:auto 0px !important ;
         display: block !important;
+    }
+    .sm{
+        // padding-top: 20px !important;
+        height: 300px !important;
     }
 }
 @media only screen and (max-width: 374px) {
@@ -635,9 +660,7 @@ z-index:1;
     .img2-response{
         height: auto !important;
     }
-    .sm{
-        height: auto !important;
-    }
+    
     .ebook{
         margin-top: 18% !important;
         .ebook-content{    
@@ -658,7 +681,7 @@ z-index:1;
             }
             .buttons{
                 justify-content: start !important;
-                margin-top: 35px;
+                margin-top: 22px;
                 margin-bottom: 25px;
                 .pdf{
                     border-radius: 6px;
@@ -706,6 +729,11 @@ z-index:1;
         }
        
     }
+    
+    label{
+        font-size: 14px !important;
+    }
+  
     .lists{
         li{
             font-size: 16px !important;
@@ -736,8 +764,13 @@ z-index:1;
     .li{
         margin-top: 0px;
     }
+    
     .l{
         margin:auto 0px !important ;
+    }
+    .sm{
+        // padding-top: 20px !important;
+        height: 270px !important;
     }
     
 }
