--- a/styles/ebookstyles/ebook.scss
+++ b/styles/ebookstyles/ebook.scss
@@ -25,7 +25,8 @@
                 border-radius: 10px;
                 font-size: 19px;
                background-color:#dddddd;
-                padding: 15px 24px;
+                padding: 15px 22px;
+                margin-right: 20px;
                 font-weight: 800 !important;
                 // margin-right: 20px;
                 a{
@@ -37,7 +38,7 @@
                 background-color: #ffd84e;
                 border-radius: 10px;
                 font-size: 19px;
-                padding: 15px 16px;
+                padding: 15px 46px;
                 a{
                     color:black;
                 }
@@ -257,7 +258,7 @@ z-index:1;
                     border-radius: 10px;
                     font-size: 14px;
                    
-                    padding: 12px 25px;
+                    padding: 11px 24px;
                     font-weight: 800 !important;
                     // margin-right: 20px;
                 }
@@ -266,7 +267,7 @@ z-index:1;
                     background-color: #ffd84e;
                     border-radius: 10px;
                     font-size: 14px;
-                    padding: 12px 20px;
+                    padding: 11px 46px;
                 }
             }
         }    
@@ -580,7 +581,6 @@ z-index:1;
                 font-weight: 600;
             }
             .buttons{
-                justify-content: space-around !important;
                 margin-top: 35px;
                 margin-bottom: 25px;
                 .pdf{
@@ -588,7 +588,7 @@ z-index:1;
                     font-size: 13px;
                    margin: auto 5px;
                    background-color:#dddddd;
-                    padding: 10px 24px;
+                    padding: 10px 16px;
                     font-weight: 700 !important;
                     // margin-right: 20px;
                     .pd{
@@ -602,7 +602,7 @@ z-index:1;
                     border-radius: 6px;
                     font-size: 13px;
                     margin: auto 5px;
-                    padding: 12px 16px !important;
+                    padding: 12px 28px !important;
                 }
             }
         }
@@ -700,7 +700,7 @@ z-index:1;
                     font-size: 11px;
                     background-color:#dddddd;
                    margin: auto 5px;
-                   padding: 8px 12px 6px 12px !important;
+                   padding: 10px 12px !important;
                     font-weight: 700 !important;
                     .pd{
                         width: 12px;
@@ -712,9 +712,9 @@ z-index:1;
                     font-weight: 600 !important;
                     background-color: #ffd84e;
                     border-radius: 6px;
-                    font-size: 12px;
+                    font-size: 11px;
                     margin: auto 5px;
-                    padding: 8px 12px 6px 12px !important;
+                    padding: 13px 18px !important;
                 }
             }
         }
