--- a/styles/ebookstyles/ebook.css
+++ b/styles/ebookstyles/ebook.css
@@ -26,7 +26,8 @@
   border-radius: 10px;
   font-size: 19px;
   background-color: #dddddd;
-  padding: 15px 24px;
+  padding: 15px 22px;
+  margin-right: 20px;
   font-weight: 800 !important;
 }
 
@@ -39,7 +40,7 @@
   background-color: #ffd84e;
   border-radius: 10px;
   font-size: 19px;
-  padding: 15px 16px;
+  padding: 15px 46px;
 }
 
 .ebook .ebook-content .buttons .inside a {
@@ -238,7 +239,7 @@
   .ebook .ebook-content .buttons .pdf {
     border-radius: 10px;
     font-size: 14px;
-    padding: 12px 25px;
+    padding: 11px 24px;
     font-weight: 800 !important;
   }
   .ebook .ebook-content .buttons .inside {
@@ -246,7 +247,7 @@
     background-color: #ffd84e;
     border-radius: 10px;
     font-size: 14px;
-    padding: 12px 20px;
+    padding: 11px 46px;
   }
   .lists {
     margin: 16px auto !important;
@@ -527,8 +528,6 @@
     font-weight: 600;
   }
   .ebook .ebook-content .buttons {
-    -ms-flex-pack: distribute !important;
-        justify-content: space-around !important;
     margin-top: 35px;
     margin-bottom: 25px;
   }
@@ -537,7 +536,7 @@
     font-size: 13px;
     margin: auto 5px;
     background-color: #dddddd;
-    padding: 10px 24px;
+    padding: 10px 16px;
     font-weight: 700 !important;
   }
   .ebook .ebook-content .buttons .pdf .pd {
@@ -550,7 +549,7 @@
     border-radius: 6px;
     font-size: 13px;
     margin: auto 5px;
-    padding: 12px 16px !important;
+    padding: 12px 28px !important;
   }
   .right-bg {
     display: none;
@@ -640,7 +639,7 @@
     font-size: 11px;
     background-color: #dddddd;
     margin: auto 5px;
-    padding: 8px 12px 6px 12px !important;
+    padding: 10px 12px !important;
     font-weight: 700 !important;
   }
   .ebook .ebook-content .buttons .pdf .pd {
@@ -651,9 +650,9 @@
     font-weight: 600 !important;
     background-color: #ffd84e;
     border-radius: 6px;
-    font-size: 12px;
+    font-size: 11px;
     margin: auto 5px;
-    padding: 8px 12px 6px 12px !important;
+    padding: 13px 18px !important;
   }
   .report-title {
     width: 93%;
