--- a/styles/ebookstyles/ebook.scss
+++ b/styles/ebookstyles/ebook.scss
@@ -56,13 +56,13 @@
 .img2-response{
     height: 500px !important;
 }
-.img{
+.top-left-img{
     position: absolute;
     top: 200px;
     right: 1px;
     // width:50%;
 }
-.img-2{
+.right-img{
     position: absolute;
     top: 350px;
     left: 1px;
@@ -203,7 +203,60 @@ z-index:1;
         font-weight: 600;
         margin-bottom: 40px;
     }
+    
 }
+.carousal-section{
+    display: flex;
+    justify-content: center;
+    margin-top: 44px; 
+   .img-div{
+      .img-carousal{
+        position: relative;
+        .image-1{
+            position: relative;
+            }
+            .image-2{
+                position: absolute;
+                left: 40px;
+                top: -25px;
+            }
+            .image-3{
+                position: absolute;
+                left: 64px;
+                top: -50px;
+            }
+            img{
+                width:350px;
+                border: 25px solid white;
+                box-shadow:-2px 1px 8px -4px #aaaaaa;
+            } 
+      }
+        
+        .span-class{
+            margin-top:18px;
+            display: flex;
+            justify-content: center;
+            .span1,.span2,.span3{
+                height: 13px;
+                width: 10px;
+                border-radius: 8px;
+                border: 0px;
+                outline: none;
+                margin: 10px 10px;
+            }
+            .span1:hover,.span2:hover,.span3:hover{
+                cursor: pointer;
+            }
+            .active{
+                background-color:#737373;
+            }
+            #two:hover,#one:hover{
+                cursor: pointer;
+            }
+        }
+    }
+}
+
 .footer-border{
     padding-bottom: 34px;
     border-bottom: 1px solid #dfdfdf;
@@ -272,7 +325,7 @@ z-index:1;
 .img2-response{
     height: 475px !important;
 }
-.img{
+.top-left-img{
     // position: absolute;
     // top: 200px;
     // right: 1px;
@@ -356,7 +409,7 @@ label{
         }
     }    
 } 
-.img-2{
+.right-img{
     position: absolute;
     top: 210px;
     left: 1px;
@@ -394,6 +447,57 @@ label{
         }
     }
 }
+.carousal-section{
+    display: block;
+    margin-top: 62px; 
+    padding-left:58px;
+   .img-div{
+      .img-carousal{
+        position: relative;
+        .image-1{
+            position: relative;
+            }
+            .image-2{
+                position: absolute;
+                left: 33px;
+                top: -18px;
+            }
+            .image-3{
+                position: absolute;
+                left: 53px;
+                top: -35px;
+            }
+            img{
+                width:214px;
+                border: 18px solid white;
+                box-shadow:-2px 1px 8px -4px #aaaaaa;
+            } 
+      }
+        
+        .span-class{
+            margin-top:12px;
+            margin-left: 94px;
+            display: block;
+            .span1,.span2,.span3{
+                height: 12px;
+                width: 9px;
+                border-radius: 8px;
+                border: 0px;
+                outline: none;
+                margin: 10px 10px;
+            }
+            .span1:hover,.span2:hover,.span3:hover{
+                cursor: pointer;
+            }
+            .active{
+                background-color:#737373;
+            }
+            #two:hover,#one:hover{
+                cursor: pointer;
+            }
+        }
+    }
+}
 .lists{
         margin: 0px auto;
         line-height: 30px;
@@ -420,11 +524,7 @@ label{
 .right-bg{
     padding-left:0px;
 }
-.sm{
-    // padding-top: 20px !important;
-    // height: 316px !important;
-    // width:368px;
-}
+
 .footer-border{
     padding-bottom: 0px;
     border-bottom: 1px solid #dfdfdf;
@@ -576,7 +676,7 @@ label{
             font-weight: 600;
         }
         .buttons{
-            margin-top: 35px;
+            margin-top: 20px;
             margin-bottom: 25px;
             .pdf{
                 border-radius: 6px;
@@ -605,8 +705,60 @@ label{
 .right-bg{
     display: none;
 } 
-.img-2{
+.right-img{
     display:none;
+}
+.carousal-section{
+    display: block;
+    margin-top: 62px; 
+    padding-left:10%;
+   .img-div{
+      .img-carousal{
+        position: relative;
+        .image-1{
+            position: relative;
+            }
+            .image-2{
+                position: absolute;
+                left: 34px;
+                top: -18px;
+            }
+            .image-3{
+                position: absolute;
+                left: 54px;
+                top: -35px;
+            }
+            img{
+                width:214px;
+                border: 18px solid white;
+                box-shadow:-2px 1px 8px -4px #aaaaaa;
+            } 
+      }
+        
+        .span-class{
+            margin-top:16px;
+            margin-left: 94px;
+            margin-bottom: 25px;
+            display: block;
+            .span1,.span2,.span3{
+                height: 12px;
+                width: 9px;
+                border-radius: 8px;
+                border: 0px;
+                outline: none;
+                margin: 10px 10px;
+            }
+            .span1:hover,.span2:hover,.span3:hover{
+                cursor: pointer;
+            }
+            .active{
+                background-color:#737373;
+            }
+            #two:hover,#one:hover{
+                cursor: pointer;
+            }
+        }
+    }
 }
 .report{
     margin-top:40px;
@@ -657,8 +809,61 @@ input {
 }
 .sm{
     // padding-top: 20px !important;
-    height: unset !important;
+    width:90% !important;
 }
+}
+@media only screen and (max-width: 379px){
+    .carousal-section{
+        display: block;
+        margin-top: 62px; 
+        padding-left:8%;
+       .img-div{
+          .img-carousal{
+            position: relative;
+            .image-1{
+                position: relative;
+                }
+                .image-2{
+                    position: absolute;
+                    left: 33px;
+                    top: -18px;
+                }
+                .image-3{
+                    position: absolute;
+                    left: 53px;
+                    top: -35px;
+                }
+                img{
+                    width:214px;
+                    border: 18px solid white;
+                    box-shadow:-2px 1px 8px -4px #aaaaaa;
+                } 
+          }
+            
+            .span-class{
+                margin-top:12px;
+                margin-left: 94px;
+                display: block;
+                .span1,.span2,.span3{
+                    height: 12px;
+                    width: 9px;
+                    border-radius: 8px;
+                    border: 0px;
+                    outline: none;
+                    margin: 10px 10px;
+                }
+                .span1:hover,.span2:hover,.span3:hover{
+                    cursor: pointer;
+                }
+                .active{
+                    background-color:#737373;
+                }
+                #two:hover,#one:hover{
+                    cursor: pointer;
+                }
+            }
+        }
+    }
 }
 @media only screen and (max-width: 374px) {
 .unstyled{
@@ -667,7 +872,57 @@ input {
 .img2-response{
     height: auto !important;
 }
-
+.carousal-section{
+    display: block;
+    margin-top: 62px; 
+    padding-left:2%;
+   .img-div{
+      .img-carousal{
+        position: relative;
+        .image-1{
+            position: relative;
+            }
+            .image-2{
+                position: absolute;
+                left: 33px;
+                top: -18px;
+            }
+            .image-3{
+                position: absolute;
+                left: 53px;
+                top: -35px;
+            }
+            img{
+                width:214px;
+                border: 18px solid white;
+                box-shadow:-2px 1px 8px -4px #aaaaaa;
+            } 
+      }
+        
+        .span-class{
+            margin-top:12px;
+            margin-left: 94px;
+            display: block;
+            .span1,.span2,.span3{
+                height: 12px;
+                width: 9px;
+                border-radius: 8px;
+                border: 0px;
+                outline: none;
+                margin: 10px 10px;
+            }
+            .span1:hover,.span2:hover,.span3:hover{
+                cursor: pointer;
+            }
+            .active{
+                background-color:#737373;
+            }
+            #two:hover,#one:hover{
+                cursor: pointer;
+            }
+        }
+    }
+}
 .ebook{
     margin-top: 18% !important;
     .ebook-content{    
@@ -683,12 +938,12 @@ input {
             color: #2c3550;
             line-height: 1.25;
             
-            font-size: 28px;
+            font-size: 32px;
             font-weight: 600;
         }
         .buttons{
             justify-content: start !important;
-            margin-top: 22px;
+            margin-top: 18px;
             margin-bottom: 25px;
             .pdf{
                 border-radius: 6px;
@@ -722,6 +977,55 @@ input {
 .whats-inside{
     h3{
         margin-bottom: 16px;
+        font-size: 31px;
+    }
+    .img-div{
+        margin-top: 100px;
+      
+        .image-1{
+        position: relative;
+        }
+        .image-2{
+            position: absolute;
+            left: 25px;
+            top: -25px;
+        }
+        .image-3{
+            position: absolute;
+            left: 50px;
+            top: -50px;
+        }
+        img{
+            width: 100%;
+            height: auto;
+            border: 25px solid white;
+            box-shadow:-2px 1px 8px -4px #aaaaaa;
+        } 
+        .span-class{
+            .span1,.span2,.span3{
+                height: 13px;
+                width: 10px;
+                border-radius: 8px;
+                border: 0px;
+                outline: none;
+                margin: 10px 10px;
+            }
+            .span1:hover,.span2:hover,.span3:hover{
+                cursor: pointer;
+            }
+            .active{
+                background-color:#737373;
+            }
+            #two:hover,#one:hover{
+                cursor: pointer;
+            }
+        }
+       
+        
+        
+        
+        
+
     }
 }
 label{
@@ -779,7 +1083,8 @@ input{
 }
 .sm{
     // padding-top: 20px !important;
-    height: unset !important;
+    width: 86% !important;
+
 }
     
 }
