--- a/styles/ebookstyles/ebook.scss
+++ b/styles/ebookstyles/ebook.scss
@@ -217,17 +217,17 @@ z-index:1;
             }
             .image-2{
                 position: absolute;
-                left: 40px;
-                top: -25px;
+                left: 33px;
+                top: -18px;
             }
             .image-3{
                 position: absolute;
-                left: 64px;
-                top: -50px;
+                left: 51px;
+                top: -36px;
             }
             img{
-                width:350px;
-                border: 25px solid white;
+                width:300px;
+                border: 18px solid white;
                 box-shadow:-2px 1px 8px -4px #aaaaaa;
             } 
       }
@@ -248,7 +248,7 @@ z-index:1;
                 cursor: pointer;
             }
             .active{
-                background-color:#737373;
+                background-color:#ffd84e;
             }
             #two:hover,#one:hover{
                 cursor: pointer;
@@ -468,7 +468,7 @@ label{
                 top: -35px;
             }
             img{
-                width:214px;
+                width:200px;
                 border: 18px solid white;
                 box-shadow:-2px 1px 8px -4px #aaaaaa;
             } 
@@ -490,7 +490,7 @@ label{
                 cursor: pointer;
             }
             .active{
-                background-color:#737373;
+                background-color:#ffd84e;
             }
             #two:hover,#one:hover{
                 cursor: pointer;
@@ -752,7 +752,7 @@ label{
                 cursor: pointer;
             }
             .active{
-                background-color:#737373;
+                background-color:#ffd84e;
             }
             #two:hover,#one:hover{
                 cursor: pointer;
@@ -856,7 +856,7 @@ input {
                     cursor: pointer;
                 }
                 .active{
-                    background-color:#737373;
+                    background-color:#ffd84e;
                 }
                 #two:hover,#one:hover{
                     cursor: pointer;
@@ -915,7 +915,7 @@ input {
                 cursor: pointer;
             }
             .active{
-                background-color:#737373;
+                background-color:#ffd84e;
             }
             #two:hover,#one:hover{
                 cursor: pointer;
